REFACTOR: RegistrationResource y TournamentResource
Limpieza final(quiero creer)  de controladores publicos:

Se eliminaron bloques try-catch en RegistrationResource y TournamentResource.

Se implementó inyeccion de dependencias por constructor.

Delegación completa del manejo de errores al GlobalExceptionHandler y AuthorizationService.