@@ -1,7 +1,7 @@
 package ar.edu.unnoba.poo2025.torneos.controller;
 
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
@@ -16,8 +16,6 @@ import org.springframework.web.bind.annotation.RestController;
 import ar.edu.unnoba.poo2025.torneos.dto.CompetitionSummaryDTO;
 import ar.edu.unnoba.poo2025.torneos.dto.RegistrationResponseDTO;
 import ar.edu.unnoba.poo2025.torneos.dto.TournamentResponseDTO;
-import ar.edu.unnoba.poo2025.torneos.exceptions.ResourceNotFoundException;
-import ar.edu.unnoba.poo2025.torneos.exceptions.TournamentNotReadyException;
 import ar.edu.unnoba.poo2025.torneos.models.Participant;
 import ar.edu.unnoba.poo2025.torneos.models.Tournament;
 import ar.edu.unnoba.poo2025.torneos.service.AuthorizationService;
@@ -25,11 +23,10 @@ import ar.edu.unnoba.poo2025.torneos.service.CompetitionService;
 import ar.edu.unnoba.poo2025.torneos.service.RegistrationService;
 import ar.edu.unnoba.poo2025.torneos.service.TournamentService;
 
-
-
 @RestController
 @RequestMapping("/tournaments")
 public class TournamentResource {
+    
     private final AuthorizationService authorizationService;
     private final TournamentService tournamentService;
     private final ModelMapper modelMapper;
@@ -37,92 +34,42 @@ public class TournamentResource {
     private final CompetitionService competitionService;
 
     public TournamentResource(AuthorizationService authorizationService,
-                            TournamentService tournamentService,
-                            ModelMapper modelMapper,
-                            RegistrationService registrationService, 
-                            CompetitionService competitionService) {
-    this.authorizationService = authorizationService;
-    this.tournamentService = tournamentService;
-    this.modelMapper = modelMapper;
-    this.registrationService = registrationService;
-    this.competitionService = competitionService;
+                              TournamentService tournamentService,
+                              ModelMapper modelMapper,
+                              RegistrationService registrationService, 
+                              CompetitionService competitionService) {
+        this.authorizationService = authorizationService;
+        this.tournamentService = tournamentService;
+        this.modelMapper = modelMapper;
+        this.registrationService = registrationService;
+        this.competitionService = competitionService;
     }
 
-
-    //TODO ordenar los metodos por GetMapping, PostMapping, etc
-    @GetMapping(produces = "application/json") //TODO esto no tiene path, porque?
+    @GetMapping(produces = "application/json")
     public ResponseEntity<?> getTournaments(
-        @RequestHeader(name = "Authorization", required = false) String authorizationHeader) {
+            @RequestHeader(name = "Authorization", required = false) String authorizationHeader) {
 
-    try {
-        if (authorizationHeader == null || authorizationHeader.isBlank()) {
-        return ResponseEntity.status(403).body(Map.of("error", "Falta Authorization header"));
-    }
-
-      // valida token y obtiene Participant (si necesitás el usuario)
+        // Validamos usuario. Si falla, el servicio lanza UnauthorizedException -> 401
         authorizationService.authorize(authorizationHeader);
 
-      // obtiene torneos publicados
         List<Tournament> list = tournamentService.getPublishedTournaments();
 
-      // mapea a DTO
         List<TournamentResponseDTO> dto = list.stream()
             .map(t -> modelMapper.map(t, TournamentResponseDTO.class))
-            .toList();
+            .collect(Collectors.toList());
 
         return ResponseEntity.ok(dto);
-
-    } catch (Exception e) {
-      return ResponseEntity.status(403).body(Map.of("error", e.getMessage()));
     }
-    }
-
-
-    @PostMapping(path = "/{tournamentId}/competitions/{competitionId}/registrations", produces = "application/json")
-    public ResponseEntity<?> registerToCompetition(
-          @RequestHeader("Authorization") String authenticationHeader,
-          @PathVariable("tournamentId") Long tournamentId,
-          @PathVariable("competitionId") Integer competitionId) {
-      try {
-
-          Participant p = authorizationService.authorize(authenticationHeader);
-
-          RegistrationResponseDTO dto = registrationService.registerParticipant(tournamentId, competitionId, p);
-
-          return ResponseEntity.status(HttpStatus.CREATED).body(dto);
-
-      } catch (Exception e) {
-          HttpStatus status = HttpStatus.BAD_REQUEST;
-          if (e.getMessage().contains("no autorizado") || e.getMessage().contains("Token")) {
-              status = HttpStatus.UNAUTHORIZED;
-          } else if (e.getMessage().contains("no encontrado")) {
-              status = HttpStatus.NOT_FOUND;
-          }
-          
-          return ResponseEntity.status(status).body(Map.of("error", e.getMessage()));
-      }
-  }
-
-
 
     @GetMapping(path = "/{tournamentId}/competitions", produces = "application/json")
     public ResponseEntity<?> getTournamentCompetitions(
             @RequestHeader(name = "Authorization", required = false) String authorizationHeader,
             @PathVariable("tournamentId") Long tournamentId) {
-        try {
-            authorizationService.authorize(authorizationHeader); 
-
-            List<CompetitionSummaryDTO> dtos = competitionService.getPublicCompetitions(tournamentId);
-            
-            return ResponseEntity.ok(dtos);
-
-        } catch (ResourceNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
-        } catch (TournamentNotReadyException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("error", e.getMessage()));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Error inesperado: " + e.getMessage()));
-        }
+        
+        authorizationService.authorize(authorizationHeader); 
+        
+        List<CompetitionSummaryDTO> dtos = competitionService.getPublicCompetitions(tournamentId);
+        return ResponseEntity.ok(dtos);
     }
 
     @GetMapping(path = "/{tournamentId}/competitions/{competitionId}", produces = "application/json")
@@ -130,20 +77,22 @@ public class TournamentResource {
             @RequestHeader(name = "Authorization", required = false) String authorizationHeader,
             @PathVariable("tournamentId") Long tournamentId,
             @PathVariable("competitionId") Integer competitionId) {
-        try {
-            authorizationService.authorize(authorizationHeader);
-
-            CompetitionSummaryDTO dto = competitionService.getPublicCompetitionDetail(tournamentId, competitionId);
-
-            return ResponseEntity.ok(dto);
-
-        } catch (ResourceNotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
-        } catch (TournamentNotReadyException e) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(Map.of("error", e.getMessage()));
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Error inesperado: " + e.getMessage()));
-        }
+        
+        authorizationService.authorize(authorizationHeader);
+        
+        CompetitionSummaryDTO dto = competitionService.getPublicCompetitionDetail(tournamentId, competitionId);
+        return ResponseEntity.ok(dto);
     }
-
+    
+    @PostMapping(path = "/{tournamentId}/competitions/{competitionId}/registrations", produces = "application/json")
+    public ResponseEntity<?> registerToCompetition(
+          @RequestHeader("Authorization") String authenticationHeader,
+          @PathVariable("tournamentId") Long tournamentId,
+          @PathVariable("competitionId") Integer competitionId) {
+      
+          Participant p = authorizationService.authorize(authenticationHeader);
+          
+          RegistrationResponseDTO dto = registrationService.registerParticipant(tournamentId, competitionId, p);
+          return ResponseEntity.status(HttpStatus.CREATED).body(dto);
+  }
 }
